# fargo

./: Cargo.toml
src/: main.rs
src/new_mod_example/: changelog.txt  info.json
