[package]
name = "fargo"
version = "0.1.0"
authors = ["JohnTheCoolingFan <ivan8215145640@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
zip = "0.5.8"
serde_json = "1.0"
walkdir = "2"
dirs = "3"
